@@ -268,6 +268,7 @@ class FrontendForm(ModelForm):
                            "cisco_umbrella_managed_org_api_key", "cisco_umbrella_managed_org_secret_key", "cisco_umbrella_managed_org_customers_id",
                            "cisco_umbrella_managed_org_get_dns", "cisco_umbrella_managed_org_get_proxy",
                            "catonetworks_account_id", "catonetworks_api_key",
+                           "infoblox_threat_defense_host", "infoblox_threat_defense_token",
                            ]:
             self.fields[field_name].required = False
 
@@ -381,7 +382,8 @@ class FrontendForm(ModelForm):
                   'lockself_x_auth_token', 'lockself_x_ls_token', 'lockself_host', 'lockself_organization_id',
                   'cisco_umbrella_managed_org_api_key', 'cisco_umbrella_managed_org_secret_key', 'cisco_umbrella_managed_org_customers_id',
                   'cisco_umbrella_managed_org_get_dns', 'cisco_umbrella_managed_org_get_proxy',
-                  'catonetworks_api_key', 'catonetworks_account_id'
+                  'catonetworks_api_key', 'catonetworks_account_id',
+                  "infoblox_threat_defense_host", "infoblox_threat_defense_token",
                   )
 
         widgets = {
@@ -590,6 +592,8 @@ class FrontendForm(ModelForm):
             'cisco_umbrella_managed_org_get_proxy': CheckboxInput(attrs={'class': 'js-switch'}),
             'catonetworks_api_key': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
             'catonetworks_account_id': TextInput(attrs={'class': 'form-control'}),
+            'infoblox_threat_defense_host': TextInput(attrs={'class': 'form-control'}),
+            'infoblox_threat_defense_token': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
         }
 
     def clean_name(self):
