@@ -2116,6 +2116,22 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_infoblox_threat_defense_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.infoblox_threat_defense_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.infoblox_threat_defense_host }}
+                            {{ form.infoblox_threat_defense_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.infoblox_threat_defense_token.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.infoblox_threat_defense_token }}
+                            {{ form.infoblox_threat_defense_token.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
